#![no_std]
[package]
name = "poker"
version = "0.1.0"
authors = [
	"Pranav Gaddamadugu <pranavsaig@gmail.com>",
	"Andy Wang <andywcal@berkeley.edu>" 
]
build = "build.rs"

[lib]
name = "poker"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
poker-api = { path = "api/" }
ekiden-core = { path = "./ekiden/core/common" }
ekiden-trusted = { path = "./ekiden/core/trusted" }
ndarray = { git = "https://github.com/ekiden/rust-ndarray", features = ["serde-1"] }
protobuf = "1.4.3"
# serde = { git = "https://github.com/ekiden/serde" }
# serde_cbor = { git = "https://github.com/ekiden/cbor" }
# serde_derive = "1.0.27"

[dependencies.rand]
version = "0.4"
default-features = false

[dependencies.rs_poker]
version = "0.4.1"
default-features = false

[build-dependencies]
ekiden-tools = { path = "./ekiden/tools" }
ekiden-edl = { path = "./ekiden/core/edl" }
