[package]
name = "poker-api"
version = "0.1.0"
authors = [
    "Pranav Gaddamadugu <pranavsaig@gmail.com>",
    
]
build = "build.rs"

[features]
default = ["no-sgx"]
no-sgx = ["protobuf", "libcontract-common/no-sgx"]
sgx = ["sgx_tstd", "protobuf-sgx", "libcontract-common/sgx"]

[dependencies]
libcontract-common = { path = "../../../libcontract/common", default-features = false }
sgx_tstd = { git = "https://github.com/ekiden/rust-sgx-sdk", optional = true }
protobuf = { version = "1.4.2", optional = true }
protobuf-sgx = { git = "https://github.com/ekiden/rust-protobuf", optional = true }

[build-dependencies]
libcontract-utils = { path = "../../../libcontract/utils" }