[package]
name = "poker-client"
version = "0.1.0"
authors = [
    "Andy Wang <andywcal@berkeley.edu>"
]

[features]
default = []
benchmark = ["client-utils/benchmark"]

[dependencies]
client-utils = { path = "../utils" }
libcontract-common = { path = "../../libcontract/common" }
compute-client = { path = "../../compute-client" }
poker-api = { path = "../../contracts/poker/api" }
clap = "2.29.1"
rand = "0.4"
